[tool.poetry]
name = "magfetch"
version = "0.1.0"
description = ""
authors = ["Cristian Prieto <me@cprieto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyInquirer = "^1.0.3"
click = "^7.1.1"
orjson = "^2.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
